# futures_trading

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-briefing.yml  daily-signal.yml
configs/: es_config.yaml  event_calendar.csv  fomc_decision_days.txt  gc_config.yaml
configs/registrations/: ES.json  GC.json
docs/: GC_model_design.md  gold_data_sources.md
pine/: README.md  gc_mtf_rsi.pine
src/futures_swing/: __init__.py  backtest.py  briefing.py  circuit_breaker.py  data_loader.py  diagnostics.py  execution.py  fair_value.py  features.py  forward_validation.py  gc_macro_model.py  gld_flow_features.py  model.py  monitor.py  pipeline.py  portfolio.py  regime.py  risk.py  roll_adjust.py  signal.py  strategy.py  vol.py
src/futures_swing/intraday/: __init__.py  data.py  features.py  gamma.py  gold_gamma.py  trend_probe.py
tests/: test_core.py  test_fair_value.py  test_roll_adjust.py
tracking/: account.json  circuit_breaker.json  gc_gamma.json  live_log.csv
