[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futures-swing"
version = "0.1.0"
description = "Systematic swing-trading model for ES and GC futures (2-15 day horizon)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "matplotlib>=3.9",
  "pyarrow>=16.1",
  "yfinance>=0.2.54",
  "lightgbm>=4.3",
  "scikit-learn>=1.4",
  "hmmlearn>=0.3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
